...
        android:layout_height="wrap_content"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxBackgroundMode="outline"
        android:layout_marginBottom="12dp">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
        android:layout_height="wrap_content"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxBackgroundMode="outline"
        android:layout_marginBottom="24dp">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

...
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>
...
